# membrane-racing

./: Cargo.toml  DISTANCE_CALCULATION_IMPROVEMENTS.md  MVP.txt  Makefile.toml  RACE_SIMULATION_DOCUMENTATION.md  STATE_HASH_COMPRESSION.md  TRACK_MANAGER_PROPERTIES_MIGRATION.md  TRACK_VALIDATION_IMPROVEMENTS.md  rust-toolchain.toml  test_epsilon_decay
.cargo/: config.toml
.github/workflows/: artifacts.yml
architecture/: anti_stuck_training.md  car.md  overall_project.md  q_learning_race_integration.md  race_engine.md  tournament.md  track_manager.md  trainer.md  training_enhancements_summary.md
contracts/: car-nft.rs
contracts/car/: Cargo.toml  README.md  schema.rs
contracts/car/src/: contract.rs  error.rs  lib.rs  msg.rs  state.rs  tests.rs  traits_engine_tests.rs
contracts/race-engine/: Cargo.toml  IMPLEMENTATION_SUMMARY.md  INTEGRATION_TEST_COVERAGE.md  README.md  schema.rs  src.rs
contracts/race-engine/src/: contract.rs  error.rs  lib.rs  state.rs  tests.rs
contracts/race-engine/src/testing/: mod.rs  q_learning_demo.rs  q_learning_test.rs  simple_q_learning_test.rs  simple_test.rs
contracts/tournament/: Cargo.toml
contracts/tournament/src/: contract.rs  error.rs  lib.rs  msg.rs  state.rs  tests.rs
contracts/track-manager/: AI_track_build_specs  Cargo.toml  src
contracts/track-manager/src/: contract.rs  error.rs  msg.rs  state.rs  tests.rs
contracts/trainer/: ANTI_STUCK_ANALYSIS.md  Cargo.toml  LEARNING_DEMONSTRATION.md  MAIN_CONTRACT_TRAINING.md  TRACK_VISUALIZATION.md  TRAINER_INTEGRATION_TESTS.md
contracts/trainer/src/: contract.rs  error.rs  integration_tests.rs  learning_tests.rs  lib.rs  msg.rs  state.rs  tests.rs
