[workspace]
members = ["contracts/*", "packages/*"]

exclude = ["my_scripts", "artifacts", "contracts/trainer/*"]

[profile.release]
codegen-units = 1
debug = false
debug-assertions = false
incremental = false
lto = true
opt-level = 'z'
overflow-checks = true
panic = 'abort'
rpath = false

[patch.crates-io]
base64ct = "=1.7.1"