[package]
name = "car"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true


[package.metadata.scripts]
optimize = """docker run --rm -v "$(pwd)":/code \
  --mount type=volume,source="$(basename "$(pwd)")_cache",target=/target \
  --mount type=volume,source=registry_cache,target=/usr/local/cargo/registry \
  cosmwasm/optimizer:0.16.0
"""


[dependencies]
racing = { path = "../../packages/racing" }
cosmwasm-schema = "1.5.11"
cosmwasm-std = "1.5.11"
cosmwasm-storage = "1.5.2"
cw-storage-plus = "0.13.4"
cw2 = "0.16.0"
cw20 = "0.16.0"
schemars = "0.8.16"
serde = { version = "1.0.197", default-features = false, features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0.58"
cw721 = "0.16.0"
cw721-base = { version = "0.16.0", default-features = false, features = ["library"] }

[dev-dependencies]
cw-multi-test = "0.16.0"

[[bin]]
name = "schema"
path = "schema.rs" 

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
cosmwasm-schema = "1.5.11"
schemars = "0.8.16"