[package]
name = "race-engine"
version = "0.1.0"
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
cosmwasm-schema = "1.4"
cosmwasm-std = "1.4"
cw-storage-plus = "1.2"
serde = { version = "1.0", default-features = false, features = ["derive"] }
thiserror = "1.0"
racing = { path = "../../packages/racing" }
blake2 = "0.10.6"

[dev-dependencies]
cw-multi-test = "0.13.4" 
