[package]
name = "tournament"
version = "0.1.0"
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
racing = { path = "../../packages/racing" }
race-engine = { path = "../race-engine" }
cosmwasm-schema = "1.0.0"
cosmwasm-std = { version = "1.0.0", features = ["stargate"] }
cosmwasm-storage = "1.0.0"
cw-storage-plus = "0.13.2"
cw2 = "0.13.2"
schemars = "0.8.8"
serde = { version = "1.0.137", default-features = false, features = ["derive"] }
thiserror = "1.0.31"
serde_json = "1.0.137"

[dev-dependencies]
cw-multi-test = "0.13.4" 